Fix horizontal scrollbar shown when animating sidebar - Closes https://github.com/kamilmielnik/scrabble-solver/issues/130

--- a/packages/scrabble-solver/src/styles/global.scss
+++ b/packages/scrabble-solver/src/styles/global.scss
@@ -20,6 +20,7 @@ body {
   font-family: var(--font--family);
   font-size: var(--font--size--m);
   line-height: var(--line-height);
+  overflow: hidden;
 }
 
 html,
